<resources>
    <string name="app_name">Delfin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Programa delfin</string>
    <string name="nav_header_subtitle">programadelfin.org.mx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_preguntas">Preguntas</string>
    <string name="countdown_hrs">HOURS</string>
    <string name="countdown_days">DAYS</string>
    <string name="countdown_min">MINUTES</string>
    <string name="countdown_sec">SECONDS</string>
    <string name="countdown_finish">TODAY IS THE DAY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_schedule">Schedule</string>
    <string name="tittle_filters_calendar">WHAT DO YOU WANT TO SEE?</string>
    <string name="filter_category_calendar">CATEGORIES</string>
    <string name="filter_status_calendar">STATUS</string>
    <string name="cateevent_taller">WORKSHOP</string>
    <string name="catevent_expo">EXPOSICIONES</string>
    <string name="catevent_oficial">OFFICIAL EVENT</string>
    <string name="catevent_conf">CONFERENCE</string>
    <string name="catevent_sport">SPORTS EVENT</string>
    <string name="typevent_pres">PRESENTIAL</string>
    <string name="typevent_virt">VIRTUAL</string>
    <string name="statevent_act">ACTIVO</string>
    <string name="statevent_canc">CANCELADA</string>
    <string name="statevent_pend">PENDIENTE</string>
    <string name="statevent_past">PASADA</string>
    <string name="filter_type_calendar">TYPE</string>
    <string name="hint_date">SELECT DATE</string>
    <string name="baseurl">http://192.168.100.53/WService/</string>
    <string name="btnFilterAply">APLY</string>
    <string name="btnFilterErase">ERASE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="scheduleErrorResponse">No se han encontrado coincidencias</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="configQuesion">Do you want to configure the permissions manually?</string>
    <string name="nonPermission">Permits were not accepted</string>
    <string name="titlleDialogPermission">We need your permission</string>
</resources>