<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/ic_question"
            android:title="@string/menu_preguntas" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_time"
            android:title="@string/menu_schedule" />
    </group>
</menu>