<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.delfinv2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.delfinv2.ui.Calendario.CalendarioFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_calendario" />

    <fragment
        android:id="@+id/nav_questions"
        android:name="com.example.delfinv2.ui.Preguntas.PreguntasFragment"
        android:label="@string/menu_preguntas"
        tools:layout="@layout/fragment_preguntas" />
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.delfinv2.ui.Schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />
</navigation>